verify that the commit + push + gh action

--- a/index.html
+++ b/index.html
@@ -3,21 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello, World!</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      margin-top: 20%;
-      background-color: #f0f0f0;
-    }
-    h1 {
-      color: #333;
-    }
-  </style>
-</head>
+  <title>Mikey Clark</title>
+  </head>
 <body>
-  <h1>Hello, World!</h1>
+  <h1>Mikey Clark</h1>
 </body>
 </html>
 
